--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#191919"
-    android:padding="15dp"
+    android:background="#141827"
     android:gravity="center_horizontal"
     tools:context=".MovieListActivity">
     
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="500dp"
+        android:layout_height="200dp"
         android:layout_margin="1dp"
-        android:id="@+id/cover_image_view"/>
+        android:id="@+id/category_cover_image_view"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -29,11 +28,13 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         app:dividerColor="#DDDDDD"
+        android:padding="15dp"
         android:layout_marginVertical="9dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="15dp"
         android:id="@+id/movies_list_recycler_view"/>
 
 </LinearLayout>
