--- a/app/src/main/res/layout/movie_list_item_recycler_row.xml
+++ b/app/src/main/res/layout/movie_list_item_recycler_row.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="17dp"
-    tools:background="@color/black">
+    tools:background="#141827">
 
     <ImageView
         android:layout_width="70dp"
